dist file editing in gitignore file

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       <h1 class="ak-bio">Ajith Kumar Biography</h1>
 
       <div class="pl-16 pt-4 text-white ">
-        <p class="pb-2 font-medium">Ajith Kumar is an Indian film actor who works mainly in Tamil cinema. In addition to his acting,
+        <p class="pb-2 font-medium">Ajith Kumar is an Indian film actor who works mainly in Tamil cinema. In addition to
+          his acting,
           Ajith Kumar
           in
           a sabbatical, participated in the 2004 British Formula 3 season as a Formula Two racing driver and was ranked
